[gd_scene load_steps=21 format=3 uid="uid://ccplq3fr0ohrg"]

[ext_resource type="Script" uid="uid://dnbp5heu6x77d" path="res://src/components/JsonEditor.gd" id="1_kla52"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i2on0"]
bg_color = Color(0.09411765, 0.09411765, 0.105882354, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4alxo"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kla52"]
draw_center = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_s40ro"]
bg_color = Color(0.15277779, 0.15277779, 0.171875, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mo7ts"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_dulr5"]
color = Color(0.35546875, 0.35546875, 0.35546875, 1)
grow_end = 7.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dulr5"]
content_margin_left = 5.0
content_margin_top = 2.0
content_margin_right = 2.0
content_margin_bottom = 2.0
bg_color = Color(0.15294118, 0.15294118, 0.17254902, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_i2on0"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_kla52"]
color = Color(0.35686275, 0.35686275, 0.35686275, 1)
vertical = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3e7dp"]
bg_color = Color(0.15294118, 0.15294118, 0.17254902, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_65tr7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4alxo"]
bg_color = Color(0.15294118, 0.15294118, 0.17254902, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_kla52"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_s40ro"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3e7dp"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2clrw"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_j1s7g"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mo7ts"]
bg_color = Color(0.15294118, 0.15294118, 0.17254902, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dulr5"]

[node name="JsonEditor" type="Window"]
oversampling_override = 1.0
position = Vector2i(8, 32)
size = Vector2i(1264, 682)
exclusive = true
unresizable = true
minimize_disabled = true
script = ExtResource("1_kla52")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_i2on0")
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10
metadata/_edit_use_anchors_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="Panel/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0
theme_override_styles/separator = SubResource("StyleBoxEmpty_4alxo")

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_kla52")
text = "Secrets:"

[node name="AddFileBtn" type="Button" parent="Panel/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(23, 23)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_s40ro")
theme_override_styles/focus = SubResource("StyleBoxEmpty_mo7ts")
text = "+"

[node name="HSeparator2" type="HSeparator" parent="Panel/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 7
theme_override_styles/separator = SubResource("StyleBoxLine_dulr5")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(230, 0)
layout_mode = 2

[node name="EditFileBtn" type="Button" parent="Panel/MarginContainer/HBoxContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_dulr5")
theme_override_styles/focus = SubResource("StyleBoxEmpty_i2on0")
text = "File 1"
alignment = 0

[node name="VSeparator" type="VSeparator" parent="Panel/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 6
theme_override_styles/separator = SubResource("StyleBoxLine_kla52")

[node name="ContentContainer" type="VBoxContainer" parent="Panel/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
metadata/_edit_use_anchors_ = true

[node name="ViewBtnContainer" type="HBoxContainer" parent="Panel/MarginContainer/HBoxContainer/ContentContainer"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_constants/separation = 10

[node name="TreeBtn" type="Button" parent="Panel/MarginContainer/HBoxContainer/ContentContainer/ViewBtnContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_3e7dp")
theme_override_styles/focus = SubResource("StyleBoxEmpty_65tr7")
text = "√Årvore"

[node name="TextBtn" type="Button" parent="Panel/MarginContainer/HBoxContainer/ContentContainer/ViewBtnContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_4alxo")
theme_override_styles/focus = SubResource("StyleBoxEmpty_kla52")
text = "Texto"

[node name="Tree" type="Tree" parent="Panel/MarginContainer/HBoxContainer/ContentContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 14
theme_override_font_sizes/title_button_font_size = 12
theme_override_styles/panel = SubResource("StyleBoxEmpty_s40ro")
theme_override_styles/focus = SubResource("StyleBoxEmpty_3e7dp")
theme_override_styles/selected_focus = SubResource("StyleBoxEmpty_2clrw")
allow_search = false
metadata/_edit_use_anchors_ = true

[node name="CodeEdit" type="CodeEdit" parent="Panel/MarginContainer/HBoxContainer/ContentContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 13
theme_override_styles/normal = SubResource("StyleBoxEmpty_j1s7g")
emoji_menu_enabled = false
drag_and_drop_selection_enabled = false
middle_mouse_paste_enabled = false
gutters_draw_line_numbers = true
indent_size = 2
auto_brace_completion_enabled = true
auto_brace_completion_highlight_matching = true

[node name="SaveBtnContainer" type="HBoxContainer" parent="Panel/MarginContainer/HBoxContainer/ContentContainer"]
layout_mode = 2
size_flags_horizontal = 8
alignment = 2

[node name="SaveBtn" type="Button" parent="Panel/MarginContainer/HBoxContainer/ContentContainer/SaveBtnContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_mo7ts")
theme_override_styles/focus = SubResource("StyleBoxEmpty_dulr5")
text = "Salvar"

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="pressed" from="Panel/MarginContainer/HBoxContainer/ContentContainer/ViewBtnContainer/TreeBtn" to="." method="_on_tree_btn_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/HBoxContainer/ContentContainer/ViewBtnContainer/TextBtn" to="." method="_on_text_btn_pressed"]
[connection signal="item_edited" from="Panel/MarginContainer/HBoxContainer/ContentContainer/Tree" to="." method="_on_tree_item_edited"]
[connection signal="text_changed" from="Panel/MarginContainer/HBoxContainer/ContentContainer/CodeEdit" to="." method="_on_code_edit_text_changed"]
[connection signal="pressed" from="Panel/MarginContainer/HBoxContainer/ContentContainer/SaveBtnContainer/SaveBtn" to="." method="_on_save_btn_pressed"]
